[project]
name = "hong-kong-fire-documentary"
version = "0.1.0"
description = "2025-11-26 Tai Po Wang Fuk Court Fire Documentary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "prek>=0.2.19",
    "ruff>=0.14.7",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.uv]
default-groups = ["dev", "docs"]
required-version = ">=0.9.5"

[tool.uv.workspace]
members = [
    "scripts/scraper",
]

[tool.ruff]
line-length = 284

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "PERF", # Perflint
    "PL",   # Pylint
    "UP",   # pyupgrade
]
ignore = ["PERF203", "PLC0415", "PLR0402"]
fixable = ["ALL"]
mccabe.max-complexity = 24

[tool.ruff.lint.per-file-ignores]
# Scrapers have complex logic that's difficult to refactor
"scripts/scrapers/url_scraper/scrapers/*.py" = ["C901", "PLR0912", "PLR0915"]


[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 23                                              # Default is 5
max-branches = 23                                          # Default is 12
max-returns = 13                                           # Default is 6
max-statements = 102                                       # Default is 50

[tool.ruff.lint.isort]
detect-same-package = true
lines-between-types = 0
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
